[package]
name = "code-2015"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = 'day1'

[[bin]]
name = 'day2'

[[bin]]
name = 'day3'

[[bin]]
name = 'day4'

[[bin]]
name = 'day5'

[[bin]]
name = 'day6'

[[bin]]
name = 'day7'

[[bin]]
name = 'day8'

[[bin]]
name = 'day9'

[[bin]]
name = 'day10'

[[bin]]
name = 'day11'

[dependencies]
md5 = "0.7.0"
regex = "1.7.0"